# extrair-urls-pdf

./: LISENCE  README.md  build.sh  extrair_urls.py  main.py  pyproject.toml  requirements.txt
extrator/: __init__.py  __main__.py
lemonpdf/: __init__.py  __main__.py  cli.py  version.py
lemonpdf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pdfurls/: __init__.py  cli.py
pdfurls.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
